[gd_scene load_steps=33 format=3 uid="uid://darg1w8l3n8cw"]

[ext_resource type="Script" path="res://scripts/character.gd" id="1_tm4rn"]
[ext_resource type="PackedScene" uid="uid://l0xfa6mufnom" path="res://scenes/player/chain.tscn" id="3_s4ppl"]
[ext_resource type="Material" uid="uid://b0qqm2c5oudfq" path="res://materials/smooth_pixel_shader_material.tres" id="4_x4h4h"]
[ext_resource type="Texture2D" uid="uid://c2emrnwbla0u2" path="res://assets/player/KungFury-16x16-Sheet.png" id="5_3y85u"]
[ext_resource type="AudioStream" uid="uid://4srng378fmhb" path="res://assets/audio/jump.wav" id="6_lvkt7"]
[ext_resource type="AudioStream" uid="uid://b3p1sb241tuu5" path="res://assets/audio/explosion.wav" id="7_xy72q"]
[ext_resource type="AudioStream" uid="uid://b1xvg7mi8vtlb" path="res://assets/audio/click.wav" id="8_71iah"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="9_4xkfp"]
[ext_resource type="AudioStream" uid="uid://c1ac2882ia44e" path="res://assets/audio/erosion.wav" id="9_30ump"]
[ext_resource type="Script" path="res://scripts/state_machine/player_states/idle_state.gd" id="10_v5qya"]
[ext_resource type="Script" path="res://scripts/state_machine/player_states/walk_state.gd" id="11_ok80x"]
[ext_resource type="Script" path="res://scripts/state_machine/player_states/run_state.gd" id="12_mw44l"]
[ext_resource type="Script" path="res://scripts/state_machine/player_states/jump_state.gd" id="13_568ox"]
[ext_resource type="Script" path="res://scripts/state_machine/player_states/jump_flip_state.gd" id="14_rqa5n"]
[ext_resource type="Script" path="res://scripts/controls/player_controls.gd" id="15_g26ov"]
[ext_resource type="Script" path="res://scripts/state_machine/player_states/fall_state.gd" id="15_kvvu4"]
[ext_resource type="Script" path="res://scripts/state_machine/player_states/land_state.gd" id="16_i5n88"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8wdf"]
size = Vector2(6, 21)

[sub_resource type="Animation" id="Animation_ouvh7"]
resource_name = "DownThrust"

[sub_resource type="Animation" id="Animation_sxn3m"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [22, 23]
}

[sub_resource type="Animation" id="Animation_mt23h"]
resource_name = "Flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [73, 74, 75, 76, 77, 78]
}

[sub_resource type="Animation" id="Animation_unh8b"]
resource_name = "Idle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_8ql1e"]
resource_name = "Jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_ndxok"]
resource_name = "Land"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 26]
}

[sub_resource type="Animation" id="Animation_in46d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kvdlk"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 14]
}

[sub_resource type="Animation" id="Animation_eh15y"]
resource_name = "ShootDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [107]
}

[sub_resource type="Animation" id="Animation_yv3hd"]
resource_name = "ShootRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [106]
}

[sub_resource type="Animation" id="Animation_665yf"]
resource_name = "ShootUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [108]
}

[sub_resource type="Animation" id="Animation_el132"]
resource_name = "UpThrust"

[sub_resource type="Animation" id="Animation_t1h8q"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42iyb"]
_data = {
"DownThrust": SubResource("Animation_ouvh7"),
"Fall": SubResource("Animation_sxn3m"),
"Flip": SubResource("Animation_mt23h"),
"Idle": SubResource("Animation_unh8b"),
"Jump": SubResource("Animation_8ql1e"),
"Land": SubResource("Animation_ndxok"),
"RESET": SubResource("Animation_in46d"),
"Run": SubResource("Animation_kvdlk"),
"ShootDown": SubResource("Animation_eh15y"),
"ShootRight": SubResource("Animation_yv3hd"),
"ShootUp": SubResource("Animation_665yf"),
"UpThrust": SubResource("Animation_el132"),
"Walk": SubResource("Animation_t1h8q")
}

[node name="KungFury" type="CharacterBody2D" node_paths=PackedStringArray("controls")]
collision_mask = 2
script = ExtResource("1_tm4rn")
move_speed = 100.0
jumps = 2
jump_force = 500.0
wall_friction = 1.0
ground_friction = 1.0
air_friction = 1.5
spawn_on_start = true
controls = NodePath("Controls")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5.5)
shape = SubResource("RectangleShape2D_g8wdf")

[node name="Chain" parent="." instance=ExtResource("3_s4ppl")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
material = ExtResource("4_x4h4h")
scale = Vector2(2, 2)
texture = ExtResource("5_3y85u")
hframes = 109

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_42iyb")
}
autoplay = "Idle"

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(8, 3)

[node name="JumpAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_lvkt7")

[node name="ShootAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xy72q")

[node name="LandAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_71iah")

[node name="ErosionAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_30ump")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_4xkfp")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("10_v5qya")
animation_name = "Idle"

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource("11_ok80x")
animation_name = "Walk"

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("12_mw44l")
animation_name = "Run"

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("13_568ox")
animation_name = "Jump"

[node name="JumpFlipState" type="Node" parent="StateMachine"]
script = ExtResource("14_rqa5n")
animation_name = "Flip"

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource("15_kvvu4")
animation_name = "Fall"

[node name="LandState" type="Node" parent="StateMachine"]
script = ExtResource("16_i5n88")
animation_name = "Land"

[node name="Controls" type="Node" parent="."]
script = ExtResource("15_g26ov")
